--- a/gallery.html
+++ b/gallery.html
@@ -3,22 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Gallery</title>
-
-    <!-- External CSS -->
-    <link rel="stylesheet" href="style.css">
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
-
-    <!-- Google Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <title>Gallery - Art Gallery</title>
 </head>
 <body>
-
     <header style="display:flex; justify-content: center ; align-items:center; gap:20px;">
         <img src="images/7.png" alt="Gallery Logo" id="gallery-logo" height="120px" width="120px">
         <h1 id="gallery-title">Modern Art Gallery</h1>
@@ -28,26 +15,21 @@
         <a href="about.html"><button type="button">About</button></a>
         <a href="gallery.html"><button type="button">Gallery</button></a>
         <a href="form.html"><button type="button">Feedback</button></a>
-        <a href="signin.html"><button type="button">Sign Out</button></a>
     </nav>
 
     <main>
-
+        <h2 style="text-align: center;">Our Gallery</h2>
         <section class="intro">
             <img src="images/1.jpg" alt="Art Gallery Image">
         </section>
-
 
         <section class="intro">
             <img src="images/2.jpg" alt="Art Gallery Image">
         </section>
 
-
         <section class="intro">
             <img src="images/3.jpg" alt="Art Gallery Image">
         </section>
-
     </main>
-
 </body>
 </html>
