--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Art Gallery - Single Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        html { scroll-behavior: smooth; }
-        .page-section { padding: 40px 20px; }
-        header { display:flex; justify-content: center; align-items:center; gap:20px; }
-        #gallery-logo { max-width:120px; height:auto; }
-        nav { text-align: center; margin: 20px; }
-        nav a { margin: 0 6px; }
-        nav button { padding: 8px 12px; cursor: pointer; }
-        .gallery { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
-        .gallery img { max-width:300px; width:100%; height:auto; }
+    html { scroll-behavior: smooth; }
+    :root {
+        --bg: linear-gradient(135deg, #f7f3ef 0%, #eef6ff 100%);
+        --text: #1b2430;
+        --accent: #0f2b4a;
+        --btn-bg: rgba(255,255,255,0.9);
+        --section-padding: 40px 20px;
+    }
 
-        @media screen and (max-width: 600px) {
-            header { flex-direction: column; gap: 10px; }
-            #gallery-logo { max-width: 80px; }
-            nav { margin: 10px; }
-            nav a { display: block; margin: 6px 0; }
-            nav button { width: 100%; }
-            .page-section { padding: 20px 10px; }
-            .gallery { flex-direction: column; align-items: center; }
-            .gallery img { max-width: 90%; }
+    .page-section { padding: var(--section-padding); }
+    .icon { vertical-align: middle; margin-right: 8px; display: inline-block; }
+    .material-icons, .fa { font-size: 18px; line-height: 1; }
+    header { display:flex; justify-content: center; align-items:center; gap:20px; }
+    #gallery-logo { max-width:120px; height:auto; }
+    nav { text-align: center; margin: 20px; }
+    nav a { margin: 0 6px; }
+    nav button { padding: 8px 12px; cursor: pointer; border-radius: 6px; border: 1px solid rgba(0,0,0,0.08); background-color: var(--btn-bg); color: var(--text); }
+    .gallery { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
+    .gallery img { max-width:300px; width:100%; height:auto; }
+
+    body { margin:0; background: var(--bg); color: var(--text); font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+    header h1 { margin: 0; color: var(--accent); }
+
+    @media screen and (max-width: 900px) {
+        :root {
+            --bg: #eaf5ff;
+            --text: #07203a;
+            --accent: #184a75;
+            --btn-bg: rgba(255,255,255,0.9);
+            --section-padding: 30px 16px;
         }
-    </style>
+
+        header { gap: 14px; }
+        #gallery-logo { max-width:100px; }
+        nav { margin: 16px; }
+        nav a { margin: 0 4px; }
+    }
+
+    @media screen and (max-width: 600px) {
+        :root {
+            --bg: #fff6f0;
+            --text: #3b2f2f;
+            --accent: #a84b2f;
+            --btn-bg: rgba(255,255,255,0.95);
+            --section-padding: 20px 10px;
+        }
+
+        header { flex-direction: column; gap: 10px; }
+        #gallery-logo { max-width: 80px; }
+        nav { margin: 10px; }
+        nav a { display: block; margin: 6px 0; }
+        nav button { width: 100%; }
+        .gallery { flex-direction: column; align-items: center; }
+        .gallery img { max-width: 90%; }
+    }
+</style>
 </head>
 <body>
     <header>
@@ -35,12 +72,11 @@
     </header>
 
     <nav>
-        <a href="#about"><button type="button">About</button></a>
-        <a href="#gallery"><button type="button">Gallery</button></a>
-        <a href="#form"><button type="button">Feedback</button></a>
-        <a href="#signin"><button type="button">Sign In</button></a>
-        <a href="#signup"><button type="button">Sign Up</button></a>
-        <a href="#source"><button type="button">Source</button></a>
+        <a href="#about"><button type="button"><span class="material-icons icon" aria-hidden="true">info</span>About</button></a>
+        <a href="#gallery"><button type="button"><span class="material-icons icon" aria-hidden="true">photo_library</span>Gallery</button></a>
+        <a href="#form"><button type="button"><span class="material-icons icon" aria-hidden="true">feedback</span>Feedback</button></a>
+        <a href="#signin"><button type="button"><span class="material-icons icon" aria-hidden="true">login</span>Sign In</button></a>
+        <a href="#signup"><button type="button"><span class="material-icons icon" aria-hidden="true">person_add</span>Sign Up</button></a>
     </nav>
 
     <main>
@@ -69,6 +105,12 @@
                 <div>
                     <label for="email">Email:</label><br>
                     <input type="email" id="email" name="email" required>
+                </div>
+                <br>
+                <div>
+                    <label>Gender:</label><br>
+                    <label><input type="radio" name="gender" value="male"> Male</label>
+                    <label style="margin-left:12px;"><input type="radio" name="gender" value="female"> Female</label>
                 </div>
                 <br>
                 <div>
@@ -144,3 +186,4 @@
 </main>
 </body>
 </html>
+
