made external css file

--- a/index.html
+++ b/index.html
@@ -7,63 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-    html { scroll-behavior: smooth; }
-    :root {
-        --bg: linear-gradient(135deg, #f7f3ef 0%, #eef6ff 100%);
-        --text: #1b2430;
-        --accent: #0f2b4a;
-        --btn-bg: rgba(255,255,255,0.9);
-        --section-padding: 40px 20px;
-    }
-
-    .page-section { padding: var(--section-padding); }
-    .icon { vertical-align: middle; margin-right: 8px; display: inline-block; }
-    .material-icons, .fa { font-size: 18px; line-height: 1; }
-    header { display:flex; justify-content: center; align-items:center; gap:20px; }
-    #gallery-logo { max-width:120px; height:auto; }
-    nav { text-align: center; margin: 20px; }
-    nav a { margin: 0 6px; }
-    nav button { padding: 8px 12px; cursor: pointer; border-radius: 6px; border: 1px solid rgba(0,0,0,0.08); background-color: var(--btn-bg); color: var(--text); }
-    .gallery { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
-    .gallery img { max-width:300px; width:100%; height:auto; }
-
-    body { margin:0; background: var(--bg); color: var(--text); font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
-    header h1 { margin: 0; color: var(--accent); }
-
-    @media screen and (max-width: 900px) {
-        :root {
-            --bg: #eaf5ff;
-            --text: #07203a;
-            --accent: #184a75;
-            --btn-bg: rgba(255,255,255,0.9);
-            --section-padding: 30px 16px;
-        }
-
-        header { gap: 14px; }
-        #gallery-logo { max-width:100px; }
-        nav { margin: 16px; }
-        nav a { margin: 0 4px; }
-    }
-
-    @media screen and (max-width: 600px) {
-        :root {
-            --bg: #fff6f0;
-            --text: #3b2f2f;
-            --accent: #a84b2f;
-            --btn-bg: rgba(255,255,255,0.95);
-            --section-padding: 20px 10px;
-        }
-
-        header { flex-direction: column; gap: 10px; }
-        #gallery-logo { max-width: 80px; }
-        nav { margin: 10px; }
-        nav a { display: block; margin: 6px 0; }
-        nav button { width: 100%; }
-        .gallery { flex-direction: column; align-items: center; }
-        .gallery img { max-width: 90%; }
-    }
-</style>
+    <!-- styles moved to style.css -->
 </head>
 <body>
     <header>
@@ -88,9 +32,18 @@
         <section id="gallery" class="page-section">
             <h2 style="text-align:center;">Our Gallery</h2>
             <div class="gallery">
-                <img src="images/1.jpg" alt="Art 1">
-                <img src="images/2.jpg" alt="Art 2">
-                <img src="images/3.jpg" alt="Art 3">
+                <figure>
+                    <img src="images/1.jpg" alt="Art 1">
+                    <figcaption>Art 1 — Quiet geometry</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/2.jpg" alt="Art 2">
+                    <figcaption>Art 2 — Color study</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/3.jpg" alt="Art 3">
+                    <figcaption>Art 3 — Warm texture</figcaption>
+                </figure>
             </div>
         </section>
 
