--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- styles moved to style.css -->
 </head>
 <body>
     <header>
@@ -26,7 +25,7 @@
     <main>
         <section id="about" class="page-section">
             <h2>About Us</h2>
-            <p>Welcome to Modern Art Gallery. This is testststst. Made in web B class 3</p>
+            <p>Welcome to Modern Art Gallery. We have the best images. Made in web B class 3</p>
         </section>
 
         <section id="gallery" class="page-section">
